Hamlib -- History of visible changes.

Copyright (C) 2000-2003  Frank Singleton
Copyright (C) 2000-2012  Stephane Fillod, and others

Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net

Version 3.0
	2013-??-??
	* Kill RPC backends and rpc.rigd/rpc.rotd
	* Build system updates--remove obsolete macros, autogen.sh now
		runs autoreconf to invoke Autotools to bootstrap the build
		system, libltdl is installed into the source tree as a part
		of the build system bootstrap and is included in the source
		tarball, ABI version is set to be compatible with the 1.2
		series, all Autotools installed files are copied rather than
		symlinked and put in the build-aux directory, building
		rigmem and rigmatrix are now user selectable at configure
		run time, building static libraries are disabled by default.
		Fixed TCL binding installation, fixed Perl binding build so it
		is not invoked by 'make dist' and clean up build files.  Cleaned
		up bindings builds to occur in alphabetical order.  Use new
		ax_pkg_swig macro and update ax_python_devel macro.
	* IC-PCR1500/2500 default write_delay to 0, IC-746/756, IC-PCR8500
		fixes, pcr.c, pcr1500.c: Add DSP support.  TNX Paul, KE7ZZ
	* WinRadio G313 updates.  TNX Julian Campbel

Version 1.2.15.3
	2012-11-01
	* Fix configure.ac so that rigctld/rotcld work on Win32 platform
	* Add NSIS script to build executable installer on Win32 platform
	* Remove unsupported commands on IC-756 (non-Pro model) from AK6I
	* Fix set_split in netrigctl.c to properly accept the split
		value.  TNX, N2ADR.
	* IC-R8500: Add RIG_LEVEL_AF to has_set_level.  TNX John, EI7IG
	* ADAT updates from Frank, DG1SBG, needed for stable operation.

Version 1.2.15.2
	2012-08-05
	* Read eeprom value for digital mode from FT-857
	* Clean up TS-950 series commands and read mode using IF command
	* Fix GS-232A/B rotor command terminations
	* Fix warnings and other issues found by mingw-w64
	* Allow seamless access to ports higher than COM9 on Windows