@@ -1,5 +1,7 @@
 /*
  * rigctld.c - (C) Stephane Fillod 2000-2011
+ *             (C) Nate Bargmann 2008,2010,2011,2012,2013
+ *             (C) The Hamlib Group 2012
  *
  * This program test/control a radio using Hamlib.
  * It takes commands from network connection.
@@ -70,7 +72,7 @@
  * NB: do NOT use -W since it's reserved by POSIX.
  * TODO: add an option to read from a file
  */
-#define SHORT_OPTIONS "m:r:p:d:P:D:s:c:T:t:C:lLuoevhV"
+#define SHORT_OPTIONS "m:r:p:d:P:D:s:c:T:t:C:lLuovhV"
 static struct option long_options[] =
 {
 	{"model",       1, 0, 'm'},
@@ -88,7 +90,6 @@ static struct option long_options[] =
 	{"show-conf",   0, 0, 'L'},
 	{"dump-caps",   0, 0, 'u'},
 	{"vfo",         0, 0, 'o'},
-	{"end-marker",  0, 0, 'e'},
 	{"verbose",     0, 0, 'v'},
 	{"help",        0, 0, 'h'},
 	{"version",     0, 0, 'V'},
@@ -107,7 +108,6 @@ void usage(void);
 
 int interactive = 1;    /* no cmd because of daemon */
 int prompt = 0;         /* Daemon mode for rigparse return string */
-int opt_end = 0;        /* END marker for rigctld */
 int vfo_mode = 0;       /* vfo_mode=0 means target VFO is current VFO */
 
 char send_cmd_term = '\r';  /* send_cmd termination char */
@@ -273,10 +273,6 @@ int main (int argc, char *argv[])
 				exit(0);
 			case 'u':
 				dump_caps_opt++;
-				break;
-			case 'e':
-				opt_end++;
-				fprintf(stderr, "-e|--end-marker option is deprecated!\nPlease consider using the Extended Response protocol instead.\n");
 				break;
 			default:
 				usage();	/* unknown option? */
@@ -557,7 +553,6 @@ void usage(void)
 	"  -l, --list                 list all model numbers and exit\n"
 	"  -u, --dump-caps            dump capabilities and exit\n"
 	"  -o, --vfo                  do not default to VFO_CURR, require extra vfo arg\n"
-	"  -e, --end-marker           use END marker in rigctld protocol (obsolete)\n"
 	"  -v, --verbose              set verbose mode, cumulative\n"
 	"  -h, --help                 display this help and exit\n"
 	"  -V, --version              output version information and exit\n\n",
@@ -568,5 +563,3 @@ void usage(void)
 	printf("\nReport bugs to <hamlib-developer@lists.sourceforge.net>.\n");
 
 }
-
-
