@@ -1,5 +1,7 @@
 /*
  * rotctl.c - (C) Stephane Fillod 2000-2010
+ *            (C) Nate Bargmann 2003,2007,2010,2011,2012,2013
+ *            (C) The Hamlib Group 2002,2006
  *
  * This program test/control a rotator using Hamlib.
  * It takes commands in interactive mode as well as
@@ -71,7 +73,6 @@ static struct option long_options[] =
 
 int interactive = 1;    /* if no cmd on command line, switch to interactive */
 int prompt = 1;         /* Print prompt in rotctl */
-int opt_end= 0 ;        /* only used by rotctld */
 
 char send_cmd_term = '\r';     /* send_cmd termination char */
 
@@ -269,4 +270,3 @@ void usage()
 
 	printf("\nReport bugs to <hamlib-developer@lists.sourceforge.net>.\n");
 }
-
